# zmum-xai

./: README.md  pyproject.toml
models/: gradient_model.pkl  mlp_model.pkl  naive_model.pkl
scripts/: ALE_PDP_Comparisonn.ipynb  JC_RandomForest.ipynb  KS_ICE.ipynb  KS_NaiveBayes.ipynb  PERMUTATION_FUNC.py  SHAP_Comparison.ipynb  SP_AllModelsBaseResults.ipynb  SP_EDA.ipynb  SP_GradientBoosting.ipynb  SP_ICE.ipynb  SVC.ipynb  ZG_EDA.ipynb  ZG_MLP.ipynb  data.py
src/: data.py
tables/: base_results.tex
