[project]
name = "src"
version = "0.0.1"
description = "ZMUM xAI"
dependencies = [
    "alibi",
    "ipykernel",
    "jinja2",
    "scikit-learn",
    "scienceplots",
    "numpy",
    "pandas",
    "matplotlib",
    "tqdm",
]
[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
